--- a/web/main/assets/css/_index.scss
+++ b/web/main/assets/css/_index.scss
@@ -56,6 +56,9 @@ body {
                 }
             }
         }
+        .header__auth {
+            margin: -8px 0;
+        }
         @include glassphormism();
     }
     main {
