--- a/web/main/assets/css/src/main.css
+++ b/web/main/assets/css/src/main.css
@@ -61,6 +61,9 @@ body * {
   color: #b30e76;
   transition: 0.3s;
 }
+.container header .header__auth {
+  margin: -8px 0;
+}
 .container main {
   display: flex;
 }
