--- a/web/main/assets/css/src/movie.css
+++ b/web/main/assets/css/src/movie.css
@@ -85,10 +85,52 @@
   -webkit-backdrop-filter: blur(9px);
   border-radius: 15px;
   border: 1px solid rgba(255, 255, 255, 0.08);
+  margin-bottom: 25px;
   display: none;
 }
 .section__player div {
   --plyr-color-main: #d61e92 !important;
   --plyr-menu-background: black !important;
   border-radius: 15px;
+}
+
+.section__comments {
+  padding: 25px;
+  background: rgba(255, 255, 255, 0.07);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15);
+  backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+}
+.section__comments .comment {
+  margin-bottom: 25px;
+}
+.section__comments .comment .comment-data {
+  display: flex;
+}
+.section__comments .comment .comment-data .comment-img img {
+  width: 40px;
+  height: 40px;
+  border-radius: 7.5px;
+  margin-right: 15px;
+}
+.section__comments .comment .comment-data .comment-user {
+  display: block;
+}
+.section__comments .comment .comment-data .comment-user .user-name {
+  margin: 0 0 5px 0;
+}
+.section__comments .comment .comment-data .comment-user .user-date {
+  color: #d4d4d4;
+  margin: 0;
+}
+.section__comments .comment .comments-info {
+  display: block;
+}
+.section__comments .comment .comments-info .comments-footer {
+  display: flex;
+}
+.section__comments .comment .comments-info .comments-footer p {
+  margin: 0 15px 0 0;
 }/*# sourceMappingURL=movie.css.map */
