grpc/initial-support

--- a/web/kinogo/src/assets/css/src/main.css
+++ b/web/kinogo/src/assets/css/src/main.css
@@ -20,7 +20,7 @@ body {
   overflow-x: hidden;
 }
 body * {
-  color: #ffffff;
+  color: #ffffff;https://studio.youtube.com/channel/UCNPUUqi4kqjeaScWtsvfyvw/videos/upload?filter=%5B%5D&sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D
   box-sizing: border-box;
 }
 
