--- a/frontend/src/assets/css/src/movie.css
+++ b/frontend/src/assets/css/src/movie.css
@@ -127,36 +127,66 @@
   border: 1px solid rgba(255, 255, 255, 0.08);
   display: none;
 }
-.section__comments .comment {
+.section__comments h2 {
+  margin-top: 0;
+}
+.section__comments .editor {
+  display: block;
   margin-bottom: 25px;
 }
-.section__comments .comment .comment-data {
-  display: flex;
+.section__comments .editor textarea {
+  padding: 25px;
+  background: rgba(255, 255, 255, 0.07);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15);
+  backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  width: 700px !important;
+  height: 150px !important;
+  padding: 15px;
+  resize: none;
+  margin-bottom: 7.5px;
 }
-.section__comments .comment .comment-data .comment-img img {
-  width: 40px;
-  height: 40px;
-  border-radius: 7.5px;
-  margin-right: 15px;
-}
-.section__comments .comment .comment-data .comment-user {
-  display: block;
-}
-.section__comments .comment .comment-data .comment-user .user-name {
-  margin: 0 0 5px 0;
-}
-.section__comments .comment .comment-data .comment-user .user-date {
+.section__comments .editor textarea::placeholder {
   color: #d4d4d4;
-  margin: 0;
 }
-.section__comments .comment .comments-info {
-  display: block;
+.section__comments .editor textarea:focus-visible {
+  outline: none;
 }
-.section__comments .comment .comments-info .comments-footer {
+.section__comments .editor button {
+  padding: 25px;
+  background: rgba(255, 255, 255, 0.07);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15);
+  backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  padding: 10px 15px;
+}
+.section__comments .editor button:hover {
+  cursor: pointer;
+}
+.section__comments .comment {
+  margin-top: 10px;
+}
+.section__comments .comment .comment__user-info {
   display: flex;
+  align-items: center;
+  gap: 10px;
 }
-.section__comments .comment .comments-info .comments-footer p {
-  margin: 0 15px 0 0;
+.section__comments .comment .comment__user-info img {
+  width: 30px;
+  height: 30px;
+  border-radius: 7.5px;
+}
+.section__comments .comment .comment__user-info a {
+  text-decoration: none;
+  font-size: 18px;
+}
+.section__comments .comment .comment__user-info p {
+  font-size: 13px;
+  color: #d4d4d4;
 }
 
 /*# sourceMappingURL=movie.css.map */
