--- a/web/main/assets/css/src/movie.css
+++ b/web/main/assets/css/src/movie.css
@@ -133,4 +133,6 @@
 }
 .section__comments .comment .comments-info .comments-footer p {
   margin: 0 15px 0 0;
-}/*# sourceMappingURL=movie.css.map */
+}
+
+/*# sourceMappingURL=movie.css.map */
