--- a/web/main/assets/css/src/main.css
+++ b/web/main/assets/css/src/main.css
@@ -258,10 +258,6 @@ main aside .aside__search form input {
   padding: 15px 10px 15px 15px;
   width: 100%;
 }
-main aside .aside__search form input::-moz-placeholder {
-  color: #ffffff;
-  opacity: 0.9;
-}
 main aside .aside__search form input::placeholder {
   color: #ffffff;
   opacity: 0.9;
@@ -386,7 +382,9 @@ main aside .aside__filter form .select-wrapper .select-result span {
   top: 14px;
   right: 15px;
   display: block;
+  -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   pointer-events: none;
   font-size: 20px;
@@ -401,10 +399,13 @@ main aside .aside__filter form .select-wrapper .select-active {
   height: 100% !important;
 }
 main aside .aside__filter form .select-wrapper .select-active span {
+  -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 main aside .aside__filter form .select-wrapper .select-active .select-result::after {
+  -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
 }
 main aside .aside__filter form .slider__year .slider__value {
@@ -539,4 +540,6 @@ main aside .aside__bestmovie .bestmovie__item button:hover #circle {
   opacity: 1;
   top: -70px;
   left: -70px;
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
