--- a/frontend/src/assets/css/src/movie.scss
+++ b/frontend/src/assets/css/src/movie.scss
@@ -174,6 +174,7 @@
     .comment {
         margin-top: 10px;
         margin-left: 20px;
+        position: relative;
         .comment__user-info{
             display: flex;
             align-items: center;
@@ -195,11 +196,21 @@
         p{
             margin: 10px 0;
         }
-        .reply-button{
+        .reply-button, .edit-button, .delete-button{
             display: block;
             cursor: pointer;
             font-size: 14px;
             color: #d4d4d4;
+        }
+        .edit-button{
+            position: absolute;
+            top: 5px;
+            right: 65px;
+        }
+        .delete-button{
+            position: absolute;
+            top: 5px;
+            right: 5px;
         }
     }
 }
