--- a/frontend/src/assets/styles/pages/movies.css
+++ b/frontend/src/assets/styles/pages/movies.css
@@ -324,6 +324,7 @@ header nav a {
 }
 header nav a:hover {
   transition: 0.3s;
+  color: #b30e76;
 }
 header .header__auth {
   margin: auto 0;
@@ -339,6 +340,15 @@ header .header__auth .header__auth-logout:hover {
   cursor: pointer;
   color: #b30e76;
   transition: 0.3s;
+}
+header .header__auth .header__auth-admin {
+  margin-right: 1rem;
+  text-decoration: none;
+  transition: 0.3s;
+}
+header .header__auth .header__auth-admin:hover {
+  transition: 0.3s;
+  color: #b30e76;
 }
 
 @media (max-width: 767px) {
